--- a/requirements.yml
+++ b/requirements.yml
@@ -3,3 +3,6 @@ roles:
   - name: juniper.junos
     src: https://github.com/cremsburg/ansible-junos-stdlib.git
     version: roles
+
+collections:
+  - juniper.device
